<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_numplex"
            android:icon="@drawable/ic_menu_numplex"
            android:title="@string/menu_numplex" />
        <item
            android:id="@+id/nav_classifications"
            android:icon="@drawable/ic_menu_classifications"
            android:title="@string/menu_classifications" />
        <item
            android:id="@+id/nav_update"
            android:icon="@drawable/ic_menu_update"
            android:title="@string/menu_updates" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_menu_feedback"
            android:title="@string/menu_feedback" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/menu_logout" />
    </group>
</menu>