<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FeedbackFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="15dp"
        android:id="@+id/feedbackPage">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feed_title"
            android:textSize="40sp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate_tag"
            android:textSize="18sp"
            android:layout_marginVertical="10dp" />

        <RatingBar
            android:id="@+id/fb_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize="1.0"
            android:layout_marginVertical="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feed_tag"
            android:textSize="18sp"
            android:layout_marginVertical="8dp"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
            <EditText
                android:id="@+id/fb_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/feed_hint"
                android:inputType="textMultiLine"
                android:layout_marginVertical="8dp"/>

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit_btn"
                android:layout_marginVertical="10dp"
                android:layout_below="@id/fb_feedback"
                android:layout_gravity="end"/>
            </LinearLayout>
        </ScrollView>




    </LinearLayout>

</FrameLayout>